# cbic-clanker-review

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
clanker-mission-control/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
clanker-mission-control/src/: App.tsx  index.css
clanker_zone/: __init__.py  cli.py  config.py  council.py  deliberation.py  dossier.py  issues.py  models.py  parser.py  server.py  session.py  workflow.py
clanker_zone/provider/: __init__.py  base.py  minimax.py
clanker_zone/report/: finalize.py  persistence.py
clanker_zone/stages/: __init__.py  arbiter.py  docket.py  manual.py  skeptic.py  specialist.py
council_review_r19/: arbiter_compiled_requests.json  arbiter_results.json  candidate_issues.json  rule_report.json  specialist_results.json
council_review_r19_v2/: arbiter_compiled_requests.json  arbiter_results.json  challenge_compiled_requests.json  challenge_results.json  rule_report.json
docs/: CLANKER_ZONE_ARCHITECTURE.md  CLANKER_ZONE_PLAN.md  COUNCIL_UPGRADE_IMPLEMENTATION.md  MINIMAX_PROVIDER_REFERENCE.md
gst_rule_review/: __init__.py  cli.py  config.py  loader.py  models.py  schema_validate.py
gst_rule_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gst_rule_review/checks/: __init__.py  amendment_markers.py  chronology.py  clauses.py  common.py  cross_refs.py  duplicates.py  formulas.py  provisos_explanations.py  raw_text.py  source_refs.py  statuses.py  (+3 more)
review_output_r19/: review_report.json  review_report.md
(+74 files in other folders)
